--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,47 @@
+# Node/Vite
+node_modules/
+**/node_modules/
+dist/
+apps/desktop/dist/
+apps/desktop/.vite/
+
+# Python
+__pycache__/
+*.py[cod]
+.venv/
+venv/
+backend/.pytest_cache/
+backend/.mypy_cache/
+backend/.ruff_cache/
+
+# Databases
+backend/app/db/sqlite/*.db
+backend/app/db/sqlite/*.db-wal
+backend/app/db/sqlite/*.db-shm
+
+# Env/config
+.env
+configs/*.env
+configs/dev.env
+configs/env.local
+
+# Ollama models cache
+docker/ollama/models/
+
+# Data cache
+data/cache/
+
+# macOS
+.DS_Store
+
+# Rust/tauri
+apps/desktop/src-tauri/target/
+apps/desktop/src-tauri/gen/
+
+# Logs
+*.log
+logs/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
